unpackaged/config/npc/objects/BudgetCategoryValue/fields/ActualPercent__c.field-meta.xml
<CustomField>
    <fullName>ActualPercent__c</fullName>
    <label>Actual Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
    <description>Actual percentage achieved (0-100) for cells in a Percent-mode category, entered in the Universal Budget grid's reporting mode. No standard actual-percent field exists on BudgetCategoryValue, so this custom field mirrors ActualAmount/ActualQuantity for Percent-mode rows.</description>
    <inlineHelpText>Actual percentage achieved this period (0-100). Reporting mode edits this value and computes variance against the budgeted percent.</inlineHelpText>
</CustomField>