unpackaged/config/npc/objects/BudgetCategoryValue/fields/Budget_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Budget_Submitted__c</fullName>
    <formula>BudgetCategory.Budget.IsSubmitted</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Submitted</label>
    <type>Checkbox</type>
    <description>Mirrors the budget's Submitted flag down to the value so the form can swap between budgeting and reporting sections. Read-only formula.</description>
    <inlineHelpText>Shown once the budget has been submitted. From then on you report what was spent instead of changing the plan.</inlineHelpText>
</CustomField>