unpackaged/config/npc/objects/BudgetCategoryValue/fields/File_Upload_Estimates__c.field-meta.xml
<CustomField>
    <fullName>File_Upload_Estimates__c</fullName>
    <label>File Upload Estimate(s)</label>
    <length>100000</length>
    <type>LongTextArea</type>
    <description>Uploaded-files JSON written by the Flow Tool Kit file upload field in the line item form (#56). Mapped as the Value Estimate FileUpload Field so the grid lights its icon and flags a money line that owes a quote. Do not edit by hand.</description>
    <inlineHelpText>Attach the quote or estimate behind this line's planned amount.</inlineHelpText>
</CustomField>