unpackaged/config/npc/objects/BudgetCategoryValue/fields/File_Upload_Receipts__c.field-meta.xml
<CustomField>
    <fullName>File_Upload_Receipts__c</fullName>
    <label>File Upload Receipt(s)</label>
    <length>100000</length>
    <type>LongTextArea</type>
    <description>Uploaded-files JSON written by the Flow Tool Kit file upload field in the line item form (#56). Mapped as the Value Receipt FileUpload Field so a Direct reporting sheet lights its icon and flags spend that owes a receipt. Do not edit by hand.</description>
    <inlineHelpText>Attach the receipt or invoice for what you actually spent on this line.</inlineHelpText>
</CustomField>