unpackaged/config/npc/objects/BudgetCategoryValue/fields/Fixed__c.field-meta.xml
<CustomField>
    <fullName>Fixed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this line item is locked - it cannot be edited, deleted, or cloned by any user in the budget matrix UI. Used for pre-allocated or system-generated budget entries.</description>
    <label>Fixed</label>
    <type>Checkbox</type>
    <inlineHelpText>Locks this amount from inline editing in the budget grid.</inlineHelpText>
</CustomField>