unpackaged/config/npc/objects/BudgetCategoryValue/fields/Grouping_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Grouping_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Grouping Identifier</label>
    <length>255</length>
    <type>Text</type>
    <description>Line-item key: budget value records sharing this value are the same line item across periods.</description>
    <inlineHelpText>Groups this record with matching records in other periods into one line-item row in the budget grid. Leave blank to group by Comments.</inlineHelpText>
</CustomField>