unpackaged/config/npc/objects/BudgetCategoryValue/fields/Percent__c.field-meta.xml
<CustomField>
    <fullName>Percent__c</fullName>
    <label>Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
    <description>Percentage value (0-100) for cells in a Percent-mode category. The Universal Budget grid reads and writes this field instead of Amount for those categories and caps each row at 100% across all periods.</description>
    <inlineHelpText>Percentage for this period (0-100). A row's percentages across all periods can never exceed 100.</inlineHelpText>
</CustomField>