unpackaged/config/npc/objects/BudgetCategoryValue/fields/Value_Label__c.field-meta.xml
<CustomField>
    <fullName>Value_Label__c</fullName>
    <formula>BudgetCategory.Name+&quot; | &quot;+
if(BudgetCategory.Line_Item_Mode__c,Comments,&quot;&quot;)+
if(IsBlank(BudgetDivisionId),&quot;&quot;,&quot; (&quot;+BudgetDivision.Name+&quot;)&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value Label</label>
    <type>Text</type>
    <description>Human label for one cell: category, the line item name where the category is in line item mode, and the period. Used as the form section subtitle and in uploaded file names.</description>
    <inlineHelpText>The category, line and period this amount belongs to.</inlineHelpText>
</CustomField>